# nora

./: .git-blame-ignore-revs  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPAT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.astra  Dockerfile.redos  MONITORING.md  Makefile  README.md  SECURITY.md  _typos.toml  llms.txt  tarpaulin.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-reland.yml  benchmarks.yml  ci.yml  post-release.yml  release.yml  rust.yml  scorecard.yml
deploy/: Dockerfile.astra  Dockerfile.redos  Dockerfile.release  config.docker.toml  prometheus-rules.yml
docs-ru/: ARCHITECTURE.md  admin-guide.md  user-guide.md
docs-site/src/content/docs/configuration/: authentication.md  s3-storage.md  settings.md
docs-site/src/content/docs/observability/: prometheus-metrics.md
docs-site/src/content/docs/registries/: raw.md
docs-site/src/content/docs/ru/configuration/: authentication.md  settings.md
docs-site/src/content/docs/ru/registries/: raw.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_rewrite_ansible.rs
nora-registry/: Cargo.toml
nora-registry/benches/: parsing.rs
nora-registry/src/: admin.rs  audit.rs  auth.rs  backup.rs  cache_ttl.rs  circuit_breaker.rs  config.rs  curation.rs  dashboard_metrics.rs  digest_quarantine.rs  docker_key_migration.rs  gc.rs  hash_pin_store.rs  health.rs  lib.rs  main.rs  metrics.rs  migrate.rs  openapi.rs  proxy_coalesce.rs  repo_index.rs  request_id.rs  test_helpers.rs  tokens.rs  validation.rs  verified.rs
nora-registry/src/auth/: mod.rs  token_routes.rs
nora-registry/src/config/: gc.rs  mod.rs  server.rs  storage.rs
nora-registry/src/config/registry/: cargo.rs  conan.rs  docker.rs  maven.rs  mod.rs  npm.rs  nuget.rs  pypi.rs
nora-registry/src/mirror/: docker.rs  mod.rs  npm.rs
nora-registry/src/registry/: ansible.rs  cargo_registry.rs  conan.rs  docker.rs  docker_auth.rs  gems.rs  go.rs  maven.rs  mod.rs  npm.rs  ns_isolation_metadata_tests.rs  nuget.rs  pub_dart.rs  pypi.rs  raw.rs  terraform.rs
nora-registry/src/registry/snapshots/: nora__registry__nuget__spec_conformance_tests__nuget_service_index_ids.snap
nora-registry/src/secrets/: env.rs  mod.rs
nora-registry/src/storage/: local.rs  mod.rs  object.rs  s3.rs
nora-registry/src/ui/: api.rs  components.rs  i18n.rs  mod.rs  templates.rs
scripts/: diff-coverage.py  lock-audit.sh  reland-build-filechanges.sh  test-reland-filechanges.sh  verify-changelog.sh
tests/: v09-features.sh
tests/e2e/tests/: raw-root-files.spec.ts  ui-contracts.spec.ts  ui-screenshots.spec.ts
tests/e2e/tests/contracts/: registry-contracts.ts  seed.ts
