[package]
name = "nora-fuzz"
version = "0.0.0"
publish = false
license = "MIT"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
nora-registry = { path = "../nora-registry" }

[[bin]]
name = "fuzz_validation"
path = "fuzz_targets/fuzz_validation.rs"
doc = false

[[bin]]
name = "fuzz_docker_manifest"
path = "fuzz_targets/fuzz_docker_manifest.rs"
doc = false

[[bin]]
name = "fuzz_npm_metadata"
path = "fuzz_targets/fuzz_npm_metadata.rs"
doc = false

[[bin]]
name = "fuzz_maven_path"
path = "fuzz_targets/fuzz_maven_path.rs"
doc = false

[[bin]]
name = "fuzz_pypi_parse"
path = "fuzz_targets/fuzz_pypi_parse.rs"
doc = false

[[bin]]
name = "fuzz_config_toml"
path = "fuzz_targets/fuzz_config_toml.rs"
doc = false

[[bin]]
name = "fuzz_url_leak"
path = "fuzz_targets/fuzz_url_leak.rs"
doc = false

[[bin]]
name = "fuzz_rewrite_ansible"
path = "fuzz_targets/fuzz_rewrite_ansible.rs"
doc = false
